cabal-version:      2.4
name:               number-wall
version:            0.1.0.0
author:             Owen Bechtel
maintainer:         ombspring@gmail.com

-- category:
-- synopsis:

-- description:

homepage:           https://github.com/UnaryPlus/number-wall
bug-reports:        https://github.com/UnaryPlus/number-wall/issues
license:            MIT
license-file:       LICENSE
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/UnaryPlus/lambda.git

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -W
  exposed-modules:  NumberWall

  build-depends:
    base ^>=4.14.1.0,
    memoize,
    mod,
    semirings,
    JuicyPixels

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -W
  main-is:          Main.hs

  build-depends:
    base,
    number-wall
